# akshara

./: .gitignore  .pylintrc  .python-version  MANIFEST.in  README.md  api.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  pytest.yml  python-publish.yml
akshara/: __init__.py  latest.csv  moola.csv  statistics.py  sutrakaarya.py  varna.py  varna.yml  varna_backup.py  varna_compiler.py  varnakaarya.py  vistrita.csv
akshara/resources/: laukika.csv  varna.yml  vividha.yml
src/varnana/: varnakaarya.py
tests/: sample_texts.yml  test_functions.py
