[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akshara"
version = "0.0.1"
authors = [
  { name="Arindam Saha", email="arindamsaha1507@gmail.com" },
]
description = "A project to help spelling in Sanskrit "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/arindamsaha1507/akshara"
